--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 rvm:
  - 2.2
+install: gem install rake -v 12.0.0
 install: gem install rails
 install: gem install rubygems-bundler
 install: gem regenerate_binstubs
