--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: ruby
 rvm:
  - 2.2
+
+before_script:
+  - psql -c "CREATE USER installvirtual WITH PASSWORD 'installvirtual';" -U postgres
+
 install: gem install rake -v 12.0.0
 install: gem install rails
 install: gem install rubygems-bundler
