--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,9 @@
 default: &default
-  adapter: psql
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
   username: installvirtual
   password: installvirtual
-  host: 127.0.0.1
+  host: localhost
   port: 5432
 
 development:
