--- a/.travis.yml
+++ b/.travis.yml
@@ -19,40 +19,11 @@ script:
   - bundle exec rake db:test:prepare
   - bundle exec rake
 before_script:
-  - cp config/database.travis.yml config/database.yml
-  - mysql -e 'create database installvirtual'
+  - "cp ./.travis.database.yml ./config/database.yml"
   - psql -c 'create database installvirtual' -U postgres
 
+script: 
+  - bundle exec rake db:schema:load
+  - bundle exec rake db:test:prepare
+  - bundle exec rake spec
 
-# config/database.travis.yml
-sqlite: &sqlite
-  adapter: sqlite3
-  database: db/<%= Rails.env %>.sqlite3
-
-mysql: &mysql
-  adapter: mysql2
-  username: root
-  password:
-  database: strano_<%= Rails.env %>
-
-postgresql: &postgresql
-  adapter: postgresql
-  username: postgres
-  password:
-  database: strano_<%= Rails.env %>
-  min_messages: ERROR
-
-defaults: &defaults
-  pool: 5
-  timeout: 5000
-  host: localhost
-  <<: *<%= ENV['DB'] || "postgresql" %>
-
-development:
-  <<: *defaults
-
-test:
-  <<: *defaults
-
-production:
-  <<: *defaults
