--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - bundle exec rake db:test:prepare
   - bundle exec rake
 before_script:
-  - "cp ./.travis.database.yml ./config/database.yml"
+  - "cp .travis.database.yml ./config/database.yml"
   - psql -c 'create database installvirtual' -U postgres
 
 script: 
