--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,6 @@ rvm:
 # install: gem regenerate_binstubs
 
 env:
-  - DB=sqlite
-  - DB=mysql
   - DB=postgresql
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
@@ -21,6 +19,8 @@ script:
 before_script:
   - "cp .travis.database.yml ./config/database.yml"
   - psql -c 'create database installvirtual' -U postgres
+
+install: gem install
 
 script: 
   - bundle exec rake db:schema:load
