changes made and everything fixed for now/cap deploy is also working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
   postgres:
     image: postgres
+    container_name: postgres
     environment:
       POSTGRES_USER: installvirtual
       POSTGRES_PASSWORD: installvirtual
